# html-rewriter-spin-test

./: README.md
html-rewriter-host/: Cargo.toml  spin.toml
html-rewriter-host/src/: lib.rs
html-rewriter-host/wit/: rewrite.wit
html-rewriter-rules/: Cargo.toml  spin.toml
html-rewriter-rules-js/: .gitignore  package-lock.json  package.json  spin.toml  tsconfig.json
html-rewriter-rules-js/bindings/: rewrite-rules.d.ts
html-rewriter-rules-js/bindings/interfaces/: fermyon-html-rewrite-rewriter.d.ts
html-rewriter-rules-js/src/: index.ts  rewriter.ts
html-rewriter-rules-js/wit/: rewrite.wit
html-rewriter-rules/src/: lib.rs
