[package]
name = "html-rewriter-host"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
futures = "0.3.28"
lol_html = "2.1.0"
spin-executor = "3.1.0"
spin-sdk = "3.1.0"
wit-bindgen = "0.16.0"

[workspace]
